updated coding challenges